evolution of interactions chart
