# storage/api-docs/api-docs.json
@@ -249,6 +249,43 @@
                 }
             }
         },
+        "/facebook-analytics/{profile_id}/evolution-of-interactions?last_days={last_days}": {
+            "get": {
+                "tags": [
+                    "facebook analytics"
+                ],
+                "summary": "evolution of interactions",
+                "description": "evolution of interactions via profile_id and number of days ago",
+                "operationId": "analyticsInteractionInDaysByProfileID",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "profile_id",
+                        "in": "path",
+                        "description": "profile id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "last_days",
+                        "in": "path",
+                        "description": "Number of days ago",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "500": {
+                        "description": "Internal Error"
+                    }
+                }
+            }
+        },
         "/instagram-analytics/profiles": {
             "get": {
                 "tags": [
